# api-users-posts

./: .env  Procfile  README.md  pyproject.toml
apirestfull_curso/src/: app.py  config.py  utils.py
apirestfull_curso/src/controllers/: auth.py  post.py  role.py  user.py
apirestfull_curso/src/models/: __init__.py  base.py  post.py  role.py  user.py
apirestfull_curso/src/views/: post.py  role.py  user.py
apirestfull_curso/tests/integration/: conftest.py
apirestfull_curso/tests/integration/controllers/: test_auth.py  test_post.py  test_role.py  test_user.py
apirestfull_curso/tests/unit/: conftest.py  test_utils.py
env/: pyvenv.cfg
instance/: bank.sqlite
