[project]
name = "api-user-post"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcoAntonioGritti", email = "m9946658@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.1.0",
    "flask-jwt-extended==4.7.1",
    "flask==3.1.0",
    "jinja2>=3.1.5,<4.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "poetry (>=2.0.1,<3.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "gunicorn",
]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
